--- a/SimpleProject/mainPage/templates/mainPage/thanks.html
+++ b/SimpleProject/mainPage/templates/mainPage/thanks.html
@@ -15,38 +15,25 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>Syafiq</td>
+                <td>abc@xyz.com</td>
+                <td>60123456789</td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>Kipid</td>
+                <td>xyz@abc.com</td>
+                <td>99987654321</td>
             </tr>
 
             <tr>
                 <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>Test</td>
+                <td>test@test.com</td>
+                <td>00123456789</td>
             </tr>
             </tbody>
         </table>
         <button class="btn btn-primary btn-block" onclick="history.go(-1)" type="submit">Back</button>
     </div>
-        <div class="datas">
-            {% for data in datas %}
-                <div class="data">
-                    <h2>{{ data.inputName }}</a></h2>
-		    <p>{{ data.id }} </p>
-                    <p>{{ data.inputEmail }}</p>
-                    <p>{{ data.inputTel }}</p>
-                    <p>{{ data.submitTime }}</p>
-
-                </div>
-            {% endfor %}
-        </div>
-
 {% endblock %}
