--- a/SimpleProject/dataGrid/templates/mainPage/dataGrid.html
+++ b/SimpleProject/dataGrid/templates/mainPage/dataGrid.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test</title>
-</head>
-<body>
- <p>Test</p>
-</body>
-</html>
+{% extends "mainPage/header.html" %}
+{% block content %}
+
+<p class="h3 mb-3 font-weight-bold"> Test </p>
+{% endblock %}
