background changes colour each time reloading. 3 colours.

--- a/SimpleProject/dataGrid/templates/mainPage/dataGrid.html
+++ b/SimpleProject/dataGrid/templates/mainPage/dataGrid.html
@@ -1,5 +1,4 @@
 {% extends "mainPage/header.html" %}
 {% block content %}
-
-<p class="h3 mb-3 font-weight-bold"> Test </p>
+<p>Data</p>
 {% endblock %}
