--- a/SimpleProject/mainPage/templates/mainPage/home.html
+++ b/SimpleProject/mainPage/templates/mainPage/home.html
@@ -1,5 +1,12 @@
 {% extends "mainPage/header.html" %}
 {% block content %}
+<script type="text/javascript">
+<!-- //Enter list of bgcolors:
+var bgcolorlist=new Array("silver", "#BAF3C3", "#c3baf3")
+
+document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.length)]
+// -->
+</script>
 
     <form class="form-signin" method="get" target="_self">
         <div class="text-center mb-4">
