--- a/SimpleProject/mainPage/templates/mainPage/home.html
+++ b/SimpleProject/mainPage/templates/mainPage/home.html
@@ -1,11 +1,10 @@
 {% extends "mainPage/header.html" %}
 {% block content %}
 <script type="text/javascript">
-<!-- //Enter list of bgcolors:
-var bgcolorlist=new Array("silver", "#BAF3C3", "#c3baf3")
+var bgcolour=["silver", "#BAF3C3", "#c3baf3"]
 
-document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.length)]
-// -->
+document.body.style.background=bgcolour[Math.floor(Math.random()*bgcolour.length)]
+
 </script>
 
     <form class="form-signin" method="get" target="_self">
